[package]
name = "file-sharing"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
clap = { version = "4.2.7", features = ["derive"] }
either = "1.8"
env_logger = "0.10"
futures = "0.3.28"
libp2p = { path = "../../libp2p", features = ["async-std", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux"] }
multiaddr = { git = "https://github.com/multiformats/rust-multiaddr", rev = "13a1e9e7da1e26a3aecdec695dc8e5cb0994d4b9" }